# hf-design

./: .gitignore  CMakeLists.txt  LICENSE  cmdline.cpp  cmdline.hpp  csv.cpp  defs.hpp  design.cpp  getopt.c  getopt.h  interval.cpp  interval.hpp  log.hpp  osdefs.hpp  part-list.cpp  part-list.hpp  part.cpp  part.hpp  range.cpp  range.hpp  report.cpp  ship.cpp  ship.hpp  state.cpp  state.hpp
